#ifndef DOOR_TILE_H
#define DOOR_TILE_H

#include "tile.h"
#include <string>

class door_tile : public tile
{
public:
    //door_tile(std::string& path, int tipo);
};

#endif // DOOR_TILE_H
