@startuml
class Area
class Audio
class AudioManager
class Client
class ClientMapLoader
class CommandExecuter
class CommandManager
class CommandSender
class Door
class DoorTile
class DoorTimer
class Drawable
class DrawableVector
class Hud
class Log
class Player
class Raycaster
class RaycastedAnimation
class ScoreBoard
class SdlAnimation
class SdlTexture
class SdlWindow
class TextureManager

class Map
class Socket
class Thread

AudioManager --> Audio

Client -up-> Log
Client --> CommandManager 
Client -left-> Raycaster

CommandExecuter --> Map
CommandExecuter --> DrawableVector
CommandExecuter --> AudioManager
CommandExecuter --> ClientMapLoader
CommandExecuter --|> CommandManager 

CommandManager --|> Thread
CommandManager --> ScoreBoard
CommandManager --> Socket

CommandSender --|> CommandManager 

Door -down-|> Drawable

DoorTimer --|> Thread
DoorTimer --> Map

Drawable --> TextureManager

DrawableVector --> Drawable

Map --> DoorTile
Map --> DoorTimer

Hud --> Player
Hud --> TextureManager
Hud --> AudioManager

Player -down-|> Drawable

RaycastedAnimation -down-|> Drawable

Raycaster --> DoorTimer
Raycaster --> DrawableVector
Raycaster --> Map
Raycaster --> Hud
Raycaster -up-> TextureManager

ScoreBoard --> TextureManager

SdlAnimation -down-|> Drawable

SdlWindow -right-> Area

SdlTexture -right-> SdlWindow 

TextureManager --> SdlTexture
TextureManager --> SdlWindow
@enduml